Fix another string parameter type

--- a/bytecodes/data/ev3.yml
+++ b/bytecodes/data/ev3.yml
@@ -4565,7 +4565,7 @@ ops:
               -
                 name: "DEFAULT"
                 desc: Default string (0 = none)
-                type: PAR8
+                type: PARS
                 dir: in
               -
                 name: "CHARSET"
